fixed word wrapping and card alignment

--- a/client/src/components/styles/Calendar.scss
+++ b/client/src/components/styles/Calendar.scss
@@ -12,8 +12,6 @@ section.calendar {
     border-bottom-left-radius: inherit;
     border-bottom-right-radius: inherit;
     margin-bottom: 2em;
-
-    white-space: nowrap;
     overflow: hidden;
 
     // table 1
